# G-Tube-Backend

./: .pre-commit-config.yaml  README.md  gen-keys.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: celery_conf.py  database.py  debug_toolbar.py  settings.py  simplejwt.py  urls.py
entrypoints/: celery.sh
src/auth_manager/: api.py  apps.py  serializers.py  urls.py
src/common/: renderers.py  views.py
src/job_manager/: apps.py  models.py  schemas.py
src/job_manager/migrations/: 0001_initial.py
src/preferences/: admin.py  api.py  apps.py  models.py  schemas.py  urls.py
src/preferences/migrations/: 0001_initial.py  0002_auto_20250209_0224.py
src/user_manager/: admin.py  api.py  apps.py  models.py  urls.py
src/user_manager/migrations/: 0001_initial.py  0002_auto_20250209_0225.py  0003_user_dp_alter_user_email.py  0004_user_cover.py  0005_alter_userpreference_unique_together.py
src/video_manager/: admin.py  api.py  apps.py  models.py
src/video_manager/migrations/: 0001_initial.py
